@@ -12,8 +12,8 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 @Data
 @Entity
@@ -38,7 +38,8 @@ public class TacoUser implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Arrays.asList(new SimpleGrantedAuthority("ROLE_USER"));
+        return "admin".equals(username) ? List.of(new SimpleGrantedAuthority("ROLE_ADMIN")) :
+                List.of(new SimpleGrantedAuthority("ROLE_USER"));
     }
 
     @Override
